tests/ui/empty_try_body.rs
//! Error: try body cannot be empty

use handle_this::handle;

fn main() {
    let _ = handle! {
        try { }  // empty body
        catch { 0 }
    };
}
